2016-02-21  James Youngman  <jay@gnu.org>

	Remove mylist<T>::operator=(void*).
	* src/mylist.h (mylist): remove mylist<T>::operator=(void*).  The
	effect of this method was to clear the list, so add a clear()
	method instead, for closer matching to std::vector.n
	* unit-tests/test_mylist.cc: remove tests for
	mylist<T>::operator=(void*).
	* src/sf-admin.cc (sccs_file::admin): use clear() to clear an
	instance of mylist<T>, not assignment to NULL.

	Remove mylist<T>::length().
	* src/mylist.h (mylist::length): delete this method (size() should
	be used instead).

	Avoid using mylist<T>::length().
	* src/sf-get2.cc (get): Use a range-based for loop instead of
	indexing up to mylist<T>::length().
	* src/sf-cdc.cc (cdc): Use mylist<T>::empty() rather than
	comparing the result of length() against 0.
	* src/sf-get3.cc (authorised): Use a range-based for loop instead
	of indexing up to mylist<T>::length().
	* src/sf-prs.cc (print_seq_list): Prefer mylist::size() to
	mylist::length().
	(print_delta): Use mylist<T>::empty() rather than comparing the
	result of length() against 0.
	* src/fileiter.cc (next): Prefer mylist::size() to
	mylist::length().
	* src/sf-admin.cc (sccs_file): Likewise.
	* src/sf-val.cc (validate_seq_lists): Likewise, factoring repeated
	code out into a new function, validate_seq_numbers.
	* src/sf-rmdel.cc (is_seqlist_member): use std::find instead of
	iterating over list members ourselves.
	* src/sf-prt.cc (print_seq_list): use a range-based for loop
	rather than iterating over the indexes in a mylist<seq_no>.
	(sccs_file): Instead of checking mylist<T>::length() against 0,
	use the empty() method.

2016-02-20  James Youngman  <jay@gnu.org>

	Prefer mylist::size() to mylist::length().
	* unit-tests/test_delta.cc: Don't use mylist::length().
	* unit-tests/test_bigfile.cc (emit_comments_or_mrs): Don't use
	mylist::length().

	Prefer mylist::size() to mylist::length().
	* unit-tests/test_mylist.cc: Use the size() method instead of the